<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCreateAdvisoryMain"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/logo_text_menu_advisory" />
        <item
            android:id="@+id/navFavoriteDoctorMain"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorite_doctor" />
        <item
            android:id="@+id/navRankingDoctoMain"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/ranking_doctor" />
        <item
            android:id="@+id/navExchangeMoneyMain"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/exchange_money" />
        <item
            android:id="@+id/navProfileMain"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile_page" />
        <item
            android:id="@+id/navLogoutMain"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />
    </group>
</menu>