<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdvisoryMenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo_text_menu_advisory"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rb_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_main"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_choose_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:text="@string/chat" />

        <RadioButton

            android:id="@+id/rb_choose_video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/videocall" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_speclist"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/rb_group"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/specialist"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_speclist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rb_group"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/tv_speclist"
        android:textAlignment="center" />

    <RelativeLayout
        android:id="@+id/rl_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_post"
        android:layout_below="@id/sp_speclist"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_typeChat"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/long_question"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_typeChat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/tv_typeChat"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_typeChat"
            android:background="@drawable/edit_text_background"
            android:backgroundTintMode="@color/colorPrimary"
            android:hint="@string/content_question"
            android:lines="5"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tv_approcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_question"
            android:layout_marginTop="10dp"
            android:text="@string/dateline_reply"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/tv_approcha"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_reply"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btndate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Date"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:theme="@style/PrimaryButton"

                    />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_reply"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_time"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:theme="@style/PrimaryButton" />

            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <!--<RelativeLayout-->
    <!--android:id="@+id/rl_videocall"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@id/btn_post"-->
    <!--android:layout_below="@id/rb_group"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:visibility="gone">-->
    <!---->
    <!--</RelativeLayout>-->


    <Button
        android:id="@+id/btn_post"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/bottom_button_post_advisory"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/PrimaryButton" />
</RelativeLayout>